style file added

--- a/index.html
+++ b/index.html
@@ -10,18 +10,29 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | News homepage</title>
   </head>
   <body>
     <header>
       <div class="header">
-        <img src="assets/images/logo.svg" alt="logo news homepage" />
+        <img
+          class="logo-icon"
+          src="assets/images/logo.svg"
+          alt="logo news homepage"
+        />
         <nav class="main-nav-bar">
-          <li>Home</li>
-          <li>New</li>
-          <li>Popular</li>
-          <li>Trending</li>
-          <li>Categories</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">New</a></li>
+          <li><a href="#">Popular</a></li>
+          <li><a href="#">Trending</a></li>
+          <li><a href="#">Categories</a></li>
         </nav>
       </div>
     </header>
