--- a/index.html
+++ b/index.html
@@ -39,25 +39,33 @@
     <main>
       <div class="container">
         <div class="hero">
-          <img src="assets/images/image-web-3-desktop.jpg" alt="header image" />
-          <h1>The Bright Future of Web 3.0?</h1>
-          <p>
-            We dive into the next evolution of the web that claims to put the
-            power of the platforms back into the hands of the people. But is it
-            really fulfilling its promise?
-          </p>
-          <a href="">read more</a>
+          <img
+            class="hero-img"
+            src="assets/images/image-web-3-desktop.jpg"
+            alt="header image"
+          />
+          <div class="hero-text">
+            <h1>The Bright Future of Web 3.0?</h1>
+            <div class="paragraphs">
+              <p class="hero-paragraph">
+                We dive into the next evolution of the web that claims to put
+                the power of the platforms back into the hands of the people.
+                But is it really fulfilling its promise?
+              </p>
+              <a class="hero-a" href="#">read more</a>
+            </div>
+          </div>
         </div>
-        <aside>
-          <h2>new</h2>
+        <aside class="aside">
+          <h2 class="aside-title">new</h2>
           <div class="aside-cards">
             <div class="aside-card">
-              <h3>Hydrogen VS Electric Cars</h3>
+              <h3 class="aside-card-title">Hydrogen VS Electric Cars</h3>
               <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
             </div>
             <div class="line"></div>
             <div class="aside-card">
-              <h3>The Downsides of AI Artistry</h3>
+              <h3 class="aside-card-title">The Downsides of AI Artistry</h3>
               <p>
                 What are the possible adverse effects of on-demand AI image
                 generation?
@@ -65,7 +73,7 @@
             </div>
             <div class="line"></div>
             <div class="aside-card">
-              <h3>Is VC Funding Drying Up?</h3>
+              <h3 class="aside-card-title">Is VC Funding Drying Up?</h3>
               <p>
                 Private funding by VC firms is down 50% YOY. We take a look at
                 what that means.
@@ -75,19 +83,40 @@
         </aside>
         <div class="cards">
           <div class="card">
-            <span>01</span>
-            <h3>Reviving Retro PCs</h3>
-            <p>What happens when old PCs are given modern upgrades?</p>
+            <img
+              class="card-img"
+              src="assets/images/image-retro-pcs.jpg"
+              alt="retro pcs image"
+            />
+            <div class="card-text">
+              <span>01</span>
+              <h3>Reviving Retro PCs</h3>
+              <p>What happens when old PCs are given modern upgrades?</p>
+            </div>
           </div>
           <div class="card">
-            <span>02</span>
-            <h3>Top 10 Laptops of 2022</h3>
-            <p>Our best picks for various needs and budgets.</p>
+            <img
+              class="card-img"
+              src="assets/images/image-top-laptops.jpg"
+              alt="top laptopt images"
+            />
+            <div class="card-text">
+              <span>02</span>
+              <h3>Top 10 Laptops of 2022</h3>
+              <p>Our best picks for various needs and budgets.</p>
+            </div>
           </div>
           <div class="card">
-            <span>03</span>
-            <h3>The Growth of Gaming</h3>
-            <p>How the pandemic has sparked fresh opportunities.</p>
+            <img
+              class="card-img"
+              src="assets/images/image-gaming-growth.jpg"
+              alt="gaming picture"
+            />
+            <div class="card-text">
+              <span>03</span>
+              <h3>The Growth of Gaming</h3>
+              <p>How the pandemic has sparked fresh opportunities.</p>
+            </div>
           </div>
         </div>
       </div>
