--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
           <h2 class="aside-title">new</h2>
           <div class="aside-cards">
             <div class="aside-card">
-              <h3 class="aside-card-title">Hydrogen VS Electric Cars</h3>
+              <a href="#" class="aside-card-title">Hydrogen VS Electric Cars</a>
               <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
             </div>
             <div class="line"></div>
             <div class="aside-card">
-              <h3 class="aside-card-title">The Downsides of AI Artistry</h3>
+              <a href="#" class="aside-card-title"
+                >The Downsides of AI Artistry</a
+              >
               <p>
                 What are the possible adverse effects of on-demand AI image
                 generation?
@@ -73,7 +75,7 @@
             </div>
             <div class="line"></div>
             <div class="aside-card">
-              <h3 class="aside-card-title">Is VC Funding Drying Up?</h3>
+              <a href="#" class="aside-card-title">Is VC Funding Drying Up?</a>
               <p>
                 Private funding by VC firms is down 50% YOY. We take a look at
                 what that means.
@@ -90,7 +92,7 @@
             />
             <div class="card-text">
               <span>01</span>
-              <h3>Reviving Retro PCs</h3>
+              <a class="card-text-title" href="#">Reviving Retro PCs</a>
               <p>What happens when old PCs are given modern upgrades?</p>
             </div>
           </div>
@@ -102,7 +104,7 @@
             />
             <div class="card-text">
               <span>02</span>
-              <h3>Top 10 Laptops of 2022</h3>
+              <a class="card-text-title" href="#">Top 10 Laptops of 2022</a>
               <p>Our best picks for various needs and budgets.</p>
             </div>
           </div>
@@ -114,7 +116,7 @@
             />
             <div class="card-text">
               <span>03</span>
-              <h3>The Growth of Gaming</h3>
+              <a class="card-text-title" href="#">The Growth of Gaming</a>
               <p>How the pandemic has sparked fresh opportunities.</p>
             </div>
           </div>
